--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>⚡ CraftOS // Hacker-Style Crafting Guide</title>
+  <title>⚡ Crafting // PIB Crafting Guide</title>
   <style>
     :root{
       --bg:#050505;
@@ -170,11 +170,7 @@
         <!-- HOME -->
         <article class="panel" role="tabpanel" id="tab-home" aria-labelledby="tabbtn-home">
           <h2>Home</h2>
-          <p>Welcome, Operator. This is your <strong>hacker-style</strong> crafting guide scaffold. Replace these blocks with your game-specific data.</p>
-          <ul>
-            <li>Use <span class="kbd">Tab</span> / <span class="kbd">Shift</span> + <span class="kbd">Tab</span> to move across controls.</li>
-            <li>Switch tabs with <span class="kbd">Ctrl</span> + <span class="kbd">Arrow</span> keys.</li>
-          </ul>
+          <p>Welcome, Indebted.</p>
         </article>
 
         <!-- MATERIALS -->
