--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>⚡ Crafting // PIB Crafting Guide</title>
+  <title> Crafting // PIB Crafting Guide</title>
   <style>
     :root{
       --bg:#050505;
