--- a/index.html
+++ b/index.html
@@ -171,6 +171,29 @@
         <article class="panel" role="tabpanel" id="tab-home" aria-labelledby="tabbtn-home">
           <h2>Home</h2>
           <p>Welcome, Indebted.</p>
+                    <p>Crafting is vital to the PIB, as such many of the inmates gather junk items for the sole reason of crafting. Though not all inmates can craft at the same level as others.
+
+Please Note: The guide will be updated periodically, it may increase or decrease ingredients needed to craft items or introduce new items. Please pay attention to the changes.
+
+How to use:
+When your character scavenges using the Scavenging Guide (Link to the guide), the item you have collected will usually have a Basic Crafting Ingredient. These items, whilst usually pieces of junk with no real value, have a value as long as you can craft it into something else. The junk item may also be used in its base form.
+For example: If you collect an empty glass bottle, you can use it either as glass or use the glass bottle for something else such as a molotov.
+In order to be able to craft, both arms and hands must be intact, they cannot be broken.
+
+Tools
+Scavenging also provides your character tools, these tools can be used to make new items or convert existing Basic Crafting Ingredients into other Basic Crafting Ingredients.
+For example: If you have cloth and a knife, you may strip the cloth into fiber. You may also use a wrench, saw and hammer to create a pipe gun as long as you have the expertise and materials.
+
+Crafting Level:
+Crafting isn’t a skill that’s learnt overnight, your character will either have to craft items to level up or receive a book from a trader or reward. Knowledge Points (KP) will be assigned to each recipe, you receive the KP for crafting the item.
+Crafting Level 1 Novice: 0-15 KP 
+Crafting Level 2 Intermediate: 15-60 KP
+Crafting Level 3 Expert: 60-150 KP
+
+Unique Recipes
+Certain traders and missions will award unique recipes for the PIB to learn, these recipes can provide the necessary push for survival or to get rich.
+
+.</p>
         </article>
 
         <!-- MATERIALS -->
