--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       background: var(--bg);
       color: var(--text);
       letter-spacing: .2px;
-      overflow:hidden; /* to keep the matrix canvas full-screen */
+      overflow-y:auto; /* allow vertical scrolling */
+      overflow-x:hidden;
     }
 
     /* Matrix rain background */
