--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       background: var(--bg);
       color: var(--text);
       letter-spacing: .2px;
-      overflow-y:auto; /* allow vertical scrolling */
+      overflow-y:visible; /* allow vertical scrolling */
       overflow-x:hidden;
     }
 
