--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
   <header class="topbar" role="banner">
     <span class="lamp" aria-hidden="true"></span>
-    <div class="brand">CRAFT<span class="cursor">_</span>OS <small>// v0.1 template</small></div>
+    <div class="brand">PIB<span class="cursor">_</span>OS <small>// v0.1 template</small></div>
   </header>
 
   <main class="wrap">
