--- a/equipment.html
+++ b/equipment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><title>⚡ CraftOS // Equipment</title><link rel="stylesheet" href="style.css" /></head>
+<head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><title>⚡ PIBCG // Equipment</title><link rel="stylesheet" href="style.css" /></head>
 <body>
 <canvas id="matrix"></canvas><div class="grid-overlay"></div>
 <header class="topbar"><span class="lamp"></span><div class="brand">CRAFT<span class="cursor">_</span>OS <small>// v0.1</small></div></header>
@@ -10,3 +10,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
