--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>⚡ CraftOS // Home</title>
+  <title>🏠 PIBCG // Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -62,5 +62,6 @@ For example: If you collect an empty glass bottle, you can use it either as glas
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
