--- a/materials.html
+++ b/materials.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>⚡ CraftOS // Materials</title>
+  <title>♻️ PIBCG // Materials</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -40,3 +40,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
