--- a/weapons.html
+++ b/weapons.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>⚡ CraftOS // Weapons</title>
+  <title>⚔️ PIBCG // Weapons</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -30,3 +30,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
