--- a/weapons.html
+++ b/weapons.html
@@ -9,7 +9,7 @@
 <body>
   <canvas id="matrix"></canvas>
   <div class="grid-overlay"></div>
-  <header class="topbar"><span class="lamp"></span><div class="brand">CRAFT<span class="cursor">_</span>OS <small>// v0.1</small></div></header>
+  <header class="topbar"><span class="lamp"></span><div class="brand">PIB<span class="cursor">_</span>USRF <small>// v0.1</small></div></header>
   <main class="wrap">
     <section class="window">
       <div class="window-head">/root/guides/weapons</div>
@@ -30,4 +30,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
