--- a/materials.html
+++ b/materials.html
@@ -12,7 +12,7 @@
 
   <header class="topbar">
     <span class="lamp"></span>
-    <div class="brand">CRAFT<span class="cursor">_</span>OS <small>// v0.1</small></div>
+    <div class="brand">PIB<span class="cursor">_</span>USRF <small>// v0.1</small></div>
   </header>
 
   <main class="wrap">
@@ -40,4 +40,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
