--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header class="topbar">
     <span class="lamp"></span>
-    <div class="brand">CRAFT<span class="cursor">_</span>OS <small>// v0.1</small></div>
+    <div class="brand">PIB<span class="cursor">_</span>USRF <small>// v0.1</small></div>
   </header>
 
   <main class="wrap">
@@ -62,6 +62,7 @@ For example: If you collect an empty glass bottle, you can use it either as glas
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
