--- a/materials.html
+++ b/materials.html
@@ -33,6 +33,19 @@
         <article class="panel">
           <h2>Materials</h2>
           <p>Placeholder text for the <strong>Materials</strong> page.</p>
+          <div class="custom-grid">
+  <div class="row full">Top Text</div>
+  <div class="row split">
+    <div class="cell text">Some text here</div>
+    <div class="cell image">[Placeholder Image]</div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Bottom Text 1</div>
+    <div class="cell">Bottom Text 2</div>
+    <div class="cell">Bottom Text 3</div>
+  </div>
+</div>
+
         </article>
       </section>
     </section>
@@ -40,5 +53,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
