--- a/materials.html
+++ b/materials.html
@@ -36,7 +36,10 @@
           <div class="custom-grid">
   <div class="row full">Top Text</div>
   <div class="row split">
-    <div class="cell text">Some text here</div>
+    <div class="cell text">Some text here
+      Text
+      Text
+    </div>
     <div class="cell image">[Placeholder Image]</div>
   </div>
   <div class="row triple">
@@ -53,6 +56,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
