--- a/materials.html
+++ b/materials.html
@@ -37,8 +37,8 @@
   <div class="row full">Top Text</div>
   <div class="row split">
     <div class="cell text">Some text here
-      Text
-      Text
+      <li> Text </li>
+      <li> Text </li>
     </div>
     <div class="cell image">[Placeholder Image]</div>
   </div>
@@ -56,6 +56,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
