--- a/materials.html
+++ b/materials.html
@@ -63,6 +63,66 @@
     <div class="cell">Bottom Text 3</div>
   </div>
 </div>
+                    <div class="custom-grid">
+  <div class="row full">Top Text</div>
+  <div class="row split">
+    <div class="cell text">Some text here
+      <li> Text </li>
+      <li> Text </li>
+    </div>
+    <div class="cell image">[Placeholder Image]</div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Bottom Text 1</div>
+    <div class="cell">Bottom Text 2</div>
+    <div class="cell">Bottom Text 3</div>
+  </div>
+</div>
+             <div class="custom-grid">
+  <div class="row full">Top Text</div>
+  <div class="row split">
+    <div class="cell text">Some text here
+      <li> Text </li>
+      <li> Text </li>
+    </div>
+    <div class="cell image">[Placeholder Image]</div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Bottom Text 1</div>
+    <div class="cell">Bottom Text 2</div>
+    <div class="cell">Bottom Text 3</div>
+  </div>
+</div>
+                    <div class="custom-grid">
+  <div class="row full">Top Text</div>
+  <div class="row split">
+    <div class="cell text">Some text here
+      <li> Text </li>
+      <li> Text </li>
+    </div>
+    <div class="cell image">[Placeholder Image]</div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Bottom Text 1</div>
+    <div class="cell">Bottom Text 2</div>
+    <div class="cell">Bottom Text 3</div>
+  </div>
+</div>
+             <div class="custom-grid">
+  <div class="row full">Top Text</div>
+  <div class="row split">
+    <div class="cell text">Some text here
+      <li> Text </li>
+      <li> Text </li>
+    </div>
+    <div class="cell image">[Placeholder Image]</div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Bottom Text 1</div>
+    <div class="cell">Bottom Text 2</div>
+    <div class="cell">Bottom Text 3</div>
+  </div>
+</div>
 
         </article>
       </section>
@@ -71,6 +131,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
