--- a/materials.html
+++ b/materials.html
@@ -33,6 +33,7 @@
         <article class="panel">
           <h2>Materials</h2>
           <p>Placeholder text for the <strong>Materials</strong> page.</p>
+          <h2>BASIC</h2>
           <div class="custom-grid">
   <div class="row full">Top Text</div>
   <div class="row split">
@@ -78,6 +79,7 @@
     <div class="cell">Bottom Text 3</div>
   </div>
 </div>
+          <h2>ADVANCED</h2>
              <div class="custom-grid">
   <div class="row full">Top Text</div>
   <div class="row split">
@@ -131,6 +133,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
