--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@ For example: If you collect an empty glass bottle, you can use it either as glas
 <h3>Unique Recipes</h3>
 <li>Certain traders and missions will award unique recipes for the PIB to learn, these recipes can provide the necessary push for survival or to get rich. </li>
 
+<h2>Basic Crafting Ingredients</h2>
+<li>Basic Crafting Ingredients are the building blocks of crafting, you will need them to craft items or better crafting ingredients.</li>
+<h3>Metal</h3>
+<li>A hard, sturdy material used for making strong tools, weapons, and other items. Requires metallurgy tools to properly make use of (I.E., forge, cast, etc.)</li>
+<h3>Wood</h3>
+<li>A basic material used in the crafting of tools, weaponry, and other items. It can even be used to make shelter or traps. May require woodworking tools to properly make use of, but not necessarily.</li>
+<h3>Adhesive</h3>
+<li>Used to make sure objects stay together. Works best when used on objects of lighter weight.</li>
+<h3>Fibers</h3>
+<li>Threads of cloth that are used in sewing up clothing or tying items together.</li>
+<h3>Pipe</h3>
+<li>Pipes, used for pipe guns, handles and to beat people with.</li>
+<h3>Cloth</h3>
+<li>Raw pieces of fabric that can be used in the creation of clothing, goods, or even tools and weaponry.</li>
+<h3>Blades</h3>
+<li>Pieces of metal blades that can be used in the crafting of primarily weapons, but could also be used for tools and other goods. Good for cutting things.</li>
+<h3>Screws and Nails</h3>
+<li>Used in the crafting of tools, weapons, and other items to make sure materials stay together. Works better than adhesive - but maybe not as great for use on brittle objects.</li>
+<h3>Plastic</h3>
+<li>…Trash. Actual trash. Used in the crafting of items, or as a stand-alone item to help you hold objects or water depending on what you find.</li>
+<h3>Glass</h3>
+<li>Brittle and transparent; used in the crafting of objects, goods, or even weaponry. May require proper glassworking tools to make use of, but not necessarily.</li>
+<h3>Stone</h3>
+<li>A common material that can be used in the crafting of almost primitive tools, weapons, and other items early on. Could also be used as a weapon or tool on its own, if you have a big enough one.</li>
+          
         </article>
       </section>
     </section>
@@ -62,6 +87,7 @@ For example: If you collect an empty glass bottle, you can use it either as glas
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
