--- a/materials.html
+++ b/materials.html
@@ -56,7 +56,7 @@
       <li> Text </li>
       <li> Text </li>
     </div>
-    <div class="cell image">[Placeholder Image]</div>
+    <div class="cell image">images.jpg</div>
   </div>
   <div class="row triple">
     <div class="cell">Bottom Text 1</div>
@@ -133,6 +133,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
