--- a/materials.html
+++ b/materials.html
@@ -34,90 +34,13 @@
           <h2>Materials</h2>
           <p>Placeholder text for the <strong>Materials</strong> page.</p>
           <h2>BASIC</h2>
-          <div class="custom-grid">
+<div class="custom-grid">
   <div class="row full">Top Text</div>
   <div class="row split">
-    <div class="cell text">Some text here
-      <li> Text </li>
-      <li> Text </li>
+    <div class="cell text">Some text here</div>
+    <div class="cell image">
+     <img src="img/images.jpg" alt="Funny cat" />
     </div>
-    <div class="cell image">[Placeholder Image]</div>
-  </div>
-  <div class="row triple">
-    <div class="cell">Bottom Text 1</div>
-    <div class="cell">Bottom Text 2</div>
-    <div class="cell">Bottom Text 3</div>
-  </div>
-</div>
-             <div class="custom-grid">
-  <div class="row full">Top Text</div>
-  <div class="row split">
-    <div class="cell text">Some text here
-      <li> Text </li>
-      <li> Text </li>
-    </div>
-    <div class="cell image">images.jpg</div>
-  </div>
-  <div class="row triple">
-    <div class="cell">Bottom Text 1</div>
-    <div class="cell">Bottom Text 2</div>
-    <div class="cell">Bottom Text 3</div>
-  </div>
-</div>
-                    <div class="custom-grid">
-  <div class="row full">Top Text</div>
-  <div class="row split">
-    <div class="cell text">Some text here
-      <li> Text </li>
-      <li> Text </li>
-    </div>
-    <div class="cell image">[Placeholder Image]</div>
-  </div>
-  <div class="row triple">
-    <div class="cell">Bottom Text 1</div>
-    <div class="cell">Bottom Text 2</div>
-    <div class="cell">Bottom Text 3</div>
-  </div>
-</div>
-          <h2>ADVANCED</h2>
-             <div class="custom-grid">
-  <div class="row full">Top Text</div>
-  <div class="row split">
-    <div class="cell text">Some text here
-      <li> Text </li>
-      <li> Text </li>
-    </div>
-    <div class="cell image">[Placeholder Image]</div>
-  </div>
-  <div class="row triple">
-    <div class="cell">Bottom Text 1</div>
-    <div class="cell">Bottom Text 2</div>
-    <div class="cell">Bottom Text 3</div>
-  </div>
-</div>
-                    <div class="custom-grid">
-  <div class="row full">Top Text</div>
-  <div class="row split">
-    <div class="cell text">Some text here
-      <li> Text </li>
-      <li> Text </li>
-    </div>
-    <div class="cell image">[Placeholder Image]</div>
-  </div>
-  <div class="row triple">
-    <div class="cell">Bottom Text 1</div>
-    <div class="cell">Bottom Text 2</div>
-    <div class="cell">Bottom Text 3</div>
-  </div>
-</div>
-             <div class="custom-grid">
-  <div class="row full">Top Text</div>
-  <div class="row split">
-    <div class="cell text">Some text here
-      <li> Text </li>
-      <li> Text </li>
-    </div>
-    <div class="cell image">[Placeholder Image]</div>
   </div>
   <div class="row triple">
     <div class="cell">Bottom Text 1</div>
@@ -126,6 +49,7 @@
   </div>
 </div>
 
+
         </article>
       </section>
     </section>
@@ -133,6 +57,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
