--- a/materials.html
+++ b/materials.html
@@ -39,7 +39,7 @@
   <div class="row split">
     <div class="cell text">Some text here</div>
     <div class="cell image">
-     <img src="img/images.jpg" alt="Funny cat" />
+     <img src="img/rigby.jpg" alt="Funny cat" />
     </div>
   </div>
   <div class="row triple">
@@ -57,6 +57,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
