--- a/materials.html
+++ b/materials.html
@@ -32,14 +32,14 @@
       <section class="content">
         <article class="panel">
           <h2>Materials</h2>
-          <p>Placeholder text for the <strong>Materials</strong> page.</p>
+          <p>Some materials can be made into other materials, it’s probably best to do this when in need.</p>
           <h2>BASIC</h2>
 <div class="custom-grid">
   <div class="row full">Top Text</div>
   <div class="row split">
     <div class="cell text">Some text here</div>
     <div class="cell image">
-     <img src="img/rigby.jpg" alt="Funny cat" />
+     <img src="img/rigby.jpg" alt="Metal" />
     </div>
   </div>
   <div class="row triple">
@@ -57,6 +57,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
