--- a/materials.html
+++ b/materials.html
@@ -35,17 +35,17 @@
           <p>Some materials can be made into other materials, it’s probably best to do this when in need.</p>
           <h2>BASIC</h2>
 <div class="custom-grid">
-  <div class="row full">Top Text</div>
+  <div class="row full">Nails</div>
   <div class="row split">
-    <div class="cell text">Some text here</div>
+    <div class="cell text">1x Metal</div>
     <div class="cell image">
      <img src="img/rigby.jpg" alt="Metal" />
     </div>
   </div>
   <div class="row triple">
-    <div class="cell">Bottom Text 1</div>
-    <div class="cell">Bottom Text 2</div>
-    <div class="cell">Bottom Text 3</div>
+    <div class="cell">Tools: Heat, Hammer</div>
+    <div class="cell">KP: +3</div>
+    <div class="cell">OOC Crafting Time: 01:00</div>
   </div>
 </div>
 
@@ -57,6 +57,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
