--- a/materials.html
+++ b/materials.html
@@ -37,7 +37,8 @@
 <div class="custom-grid">
   <div class="row full">Nails</div>
   <div class="row split">
-    <div class="cell text">1x Metal</div>
+    <div class="cell text">Ingredients Required:</div>
+    <li>1x Metal</li>
     <div class="cell image">
      <img src="img/rigby.jpg" alt="Metal" />
     </div>
@@ -57,6 +58,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
