--- a/materials.html
+++ b/materials.html
@@ -37,8 +37,9 @@
 <div class="custom-grid">
   <div class="row full">Nails</div>
   <div class="row split">
-    <div class="cell text">Ingredients Required:</div>
+    <div class="cell text">Ingredients Required:
     <li>1x Metal</li>
+      </div>
     <div class="cell image">
      <img src="img/rigby.jpg" alt="Metal" />
     </div>
@@ -58,6 +59,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
