--- a/materials.html
+++ b/materials.html
@@ -41,7 +41,7 @@
     <li>1x Metal</li>
       </div>
     <div class="cell image">
-     <img src="img/rigby.jpg" alt="Metal" />
+     <img src="img/Nails.png" alt="Metal" />
     </div>
   </div>
   <div class="row triple">
@@ -59,6 +59,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
