--- a/materials.html
+++ b/materials.html
@@ -46,8 +46,24 @@
   </div>
   <div class="row triple">
     <div class="cell">Tools: Heat, Hammer</div>
-    <div class="cell">KP: +3</div>
+    <div class="cell">KP: +0</div>
     <div class="cell">OOC Crafting Time: 01:00</div>
+  </div>
+</div>
+          <div class="custom-grid">
+  <div class="row full">Pipe</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Metal</li>
+      </div>
+    <div class="cell image">
+     <img src="img/pipes.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Heat, Saw, Hammer</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 05:00</div>
   </div>
 </div>
 
@@ -59,6 +75,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
