--- a/materials.html
+++ b/materials.html
@@ -33,7 +33,7 @@
         <article class="panel">
           <h2>Materials</h2>
           <p>Some materials can be made into other materials, it’s probably best to do this when in need.</p>
-          <h2>BASIC</h2>
+          <h2>BASIC CRAFTING INGREDIENTS</h2>
 <div class="custom-grid">
   <div class="row full">Nails</div>
   <div class="row split">
@@ -57,7 +57,7 @@
     <li>1x Metal</li>
       </div>
     <div class="cell image">
-     <img src="img/pipes.png" alt="Metal" />
+     <img src="img/pipes.png" alt="pipe" />
     </div>
   </div>
   <div class="row triple">
@@ -66,7 +66,54 @@
     <div class="cell">OOC Crafting Time: 05:00</div>
   </div>
 </div>
-
+                    <div class="custom-grid">
+  <div class="row full">Blades</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Metal</li>
+      </div>
+    <div class="cell image">
+     <img src="img/razor.png" alt="blade" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Heat, Saw</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 02:30</div>
+  </div>
+</div>
+                    <div class="custom-grid">
+  <div class="row full">2x Fiber</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Cloth</li>
+      </div>
+    <div class="cell image">
+     <img src="img/fiber.png" alt="blade" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Knife</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 00:05</div>
+  </div>
+</div>
+                              <div class="custom-grid">
+  <div class="row full">Cloth</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>3x Fiber</li>
+      </div>
+    <div class="cell image">
+     <img src="img/fiber.png" alt="blade" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Thread and Needle</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 10:00</div>
+  </div>
+</div>
 
         </article>
       </section>
@@ -75,6 +122,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
