--- a/materials.html
+++ b/materials.html
@@ -105,7 +105,7 @@
     <li>3x Fiber</li>
       </div>
     <div class="cell image">
-     <img src="img/cloth.png" alt="blade" />
+     <img src="img/cloth.png" alt="cloth" />
     </div>
   </div>
   <div class="row triple">
@@ -122,6 +122,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
