--- a/materials.html
+++ b/materials.html
@@ -114,7 +114,25 @@
     <div class="cell">OOC Crafting Time: 10:00</div>
   </div>
 </div>
-
+          <h2>ADVANCED CRAFTING INGREDIENTS</h2>
+  <div class="custom-grid">
+  <div class="row full">Strong Cloth</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Fiber</li>
+    <li>1x Cloth</li>
+      <li>1x Adhesive</li>
+      </div>
+    <div class="cell image">
+     <img src="img/strongcloth.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Thread and Needle</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 10:00</div>
+  </div>
+</div>
         </article>
       </section>
     </section>
@@ -122,6 +140,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
