--- a/materials.html
+++ b/materials.html
@@ -130,7 +130,124 @@
   <div class="row triple">
     <div class="cell">Tools: Thread and Needle</div>
     <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 20:00</div>
+  </div>
+</div>
+            <div class="custom-grid">
+  <div class="row full">Strong Glass</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Glass</li>
+    <li>1x Stone</li>
+      </div>
+    <div class="cell image">
+     <img src="img/rigby.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Heat, Hammer</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 15:00</div>
+  </div>
+</div>
+                      <div class="custom-grid">
+  <div class="row full">Strong Fiber</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Fiber</li>
+    <li>1x Adhesive</li>
+      </div>
+    <div class="cell image">
+     <img src="img/strongfiber.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: None</div>
+    <div class="cell">KP: +0</div>
     <div class="cell">OOC Crafting Time: 10:00</div>
+  </div>
+</div>
+<div class="custom-grid">
+  <div class="row full">Treated Wood</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Wood</li>
+    <li>1x Adhesive</li>
+      </div>
+    <div class="cell image">
+     <img src="img/treatedwood.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: None</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 05:00</div>
+  </div>
+</div>
+          <div class="custom-grid">
+  <div class="row full">"Super" Adhesive</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Plastic</li>
+    <li>2x Adhesive</li>
+      </div>
+    <div class="cell image">
+     <img src="img/superadhesive.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: None</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 05:00</div>
+  </div>
+</div>
+                    <div class="custom-grid">
+  <div class="row full">Alloy</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>2x Metal</li>
+      </div>
+    <div class="cell image">
+     <img src="img/alloy.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Heat, Hammer</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 30:00</div>
+  </div>
+</div>
+        <div class="custom-grid">
+  <div class="row full">Strong Wood</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>2x Wood</li>
+    <li>1x Nails</li>
+      </div>
+    <div class="cell image">
+     <img src="img/strongwood.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools:Hammer</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 01:00</div>
+  </div>
+</div>
+                  <div class="custom-grid">
+  <div class="row full">Spring</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Metal</li>
+      </div>
+    <div class="cell image">
+     <img src="img/spring.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools:Hammer, Heat</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 40:00</div>
   </div>
 </div>
         </article>
@@ -140,6 +257,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
