--- a/materials.html
+++ b/materials.html
@@ -141,7 +141,7 @@
     <li>1x Stone</li>
       </div>
     <div class="cell image">
-     <img src="img/rigby.png" alt="cloth" />
+     <img src="img/rigby.jpg" alt="cloth" />
     </div>
   </div>
   <div class="row triple">
@@ -257,6 +257,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
