--- a/materials.html
+++ b/materials.html
@@ -250,6 +250,56 @@
     <div class="cell">OOC Crafting Time: 40:00</div>
   </div>
 </div>
+<div class="custom-grid">
+  <div class="row full">Rope</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>3x Fiber</li>
+      </div>
+    <div class="cell image">
+     <img src="img/rope.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools:None</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 30:00</div>
+  </div>
+  <div class="custom-grid">
+  <div class="row full">Strong Polymer</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Plastic</li>
+         <li>1x Adhesive</li>
+      </div>
+    <div class="cell image">
+     <img src="img/strongpolymer.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools:Heat</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 10:00</div>
+  </div>
+</div>
+    <div class="custom-grid">
+  <div class="row full">Waterproof Cloth</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Plastic</li>
+         <li>1x Cloth</li>
+       <li>1x Fiber</li>
+      </div>
+    <div class="cell image">
+     <img src="img/waterproofcloth.png" alt="cloth" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools:Thread and Needle</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 40:00</div>
+  </div>
+</div>
         </article>
       </section>
     </section>
@@ -257,6 +307,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
