--- a/weapons.html
+++ b/weapons.html
@@ -24,11 +24,32 @@
         <a class="tab-btn" href="kit.html">Kit</a>
         <a class="tab-btn" href="misc.html">Misc</a>
       </nav>
-      <section class="content"><article class="panel"><h2>Weapons</h2><p>Placeholder text for the <strong>Weapons</strong> page.</p></article></section>
+      <section class="content"><article class="panel"><h2>Weapons</h2><p>Placeholder text for the <strong>Weapons</strong> page.</p>
+      <div class="custom-grid">
+  <div class="row full">Shiv</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Blade</li>
+      <li>1x Plastic</li>
+      <li>1x Adhesive</li>
+      </div>
+    <div class="cell image">
+     <img src="img/Nails.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +0</div>
+    <div class="cell">OOC Crafting Time: 00:30</div>
+  </div>
+</div>
+      </article>
+      </section>
     </section>
   </main>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
