--- a/weapons.html
+++ b/weapons.html
@@ -25,6 +25,7 @@
         <a class="tab-btn" href="misc.html">Misc</a>
       </nav>
       <section class="content"><article class="panel"><h2>Weapons</h2><p>Placeholder text for the <strong>Weapons</strong> page.</p>
+        <h2>Novice Weapons</h2>
       <div class="custom-grid">
   <div class="row full">Shiv</div>
   <div class="row split">
@@ -50,6 +51,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
