--- a/weapons.html
+++ b/weapons.html
@@ -35,12 +35,12 @@
       <li>1x Adhesive</li>
       </div>
     <div class="cell image">
-     <img src="img/Nails.png" alt="Metal" />
+     <img src="img/shiv.png" alt="Metal" />
     </div>
   </div>
   <div class="row triple">
     <div class="cell">Tools: N/A</div>
-    <div class="cell">KP: +0</div>
+    <div class="cell">KP: +3</div>
     <div class="cell">OOC Crafting Time: 00:30</div>
   </div>
 </div>
@@ -51,6 +51,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
