--- a/weapons.html
+++ b/weapons.html
@@ -24,7 +24,12 @@
         <a class="tab-btn" href="kit.html">Kit</a>
         <a class="tab-btn" href="misc.html">Misc</a>
       </nav>
-      <section class="content"><article class="panel"><h2>Weapons</h2><p>Placeholder text for the <strong>Weapons</strong> page.</p>
+      <section class="content"><article class="panel"><h2>Weapons</h2><p>Food and drink aren’t the only things that will help you survive in the PIB. Weapons are vital for survival in the PIB, if you don’t have one: get one.</p>
+<li>Weapons break, they always do:</li>
+<li>Novice level: Break after 2 missions</li>
+<li>Intermediate level: Break after 5 missions</li>
+<li>Expert level: Break after 10 missions </li>
+
         <h2>Novice Weapons</h2>
       <div class="custom-grid">
   <div class="row full">Shiv</div>
@@ -51,6 +56,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
