--- a/weapons.html
+++ b/weapons.html
@@ -49,6 +49,40 @@
     <div class="cell">OOC Crafting Time: 00:30</div>
   </div>
 </div>
+  <div class="custom-grid">
+  <div class="row full">Glass Shiv</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Glass</li>
+      <li>1x Cloth</li>
+      </div>
+    <div class="cell image">
+     <img src="img/rigby.jpg" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +2</div>
+    <div class="cell">OOC Crafting Time: 00:05</div>
+  </div>
+</div>
+          <div class="custom-grid">
+  <div class="row full">Wooden Club</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>2x Wood</li>
+      <li>1x Cloth</li>
+      </div>
+    <div class="cell image">
+     <img src="img/woodenclub.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +2</div>
+    <div class="cell">OOC Crafting Time: 02:00</div>
+  </div>
+</div>
       </article>
       </section>
     </section>
@@ -56,6 +90,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
