--- a/weapons.html
+++ b/weapons.html
@@ -83,6 +83,23 @@
     <div class="cell">OOC Crafting Time: 02:00</div>
   </div>
 </div>
+                  <div class="custom-grid">
+  <div class="row full">Stone Hatchet</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>2x Wood</li>
+      <li>1x Cloth</li>
+      </div>
+    <div class="cell image">
+     <img src="img/stonehatchet.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +3</div>
+    <div class="cell">OOC Crafting Time: 02:00</div>
+  </div>
+</div>
       </article>
       </section>
     </section>
@@ -90,6 +107,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
