--- a/weapons.html
+++ b/weapons.html
@@ -87,8 +87,9 @@
   <div class="row full">Stone Hatchet</div>
   <div class="row split">
     <div class="cell text">Ingredients Required:
-    <li>2x Wood</li>
-      <li>1x Cloth</li>
+    <li>1x Wood</li>
+      <li>1x Fiber</li>
+      <li>1x Stone</li>
       </div>
     <div class="cell image">
      <img src="img/stonehatchet.png" alt="Metal" />
@@ -107,6 +108,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
