--- a/weapons.html
+++ b/weapons.html
@@ -101,6 +101,25 @@
     <div class="cell">OOC Crafting Time: 02:00</div>
   </div>
 </div>
+   <div class="custom-grid">
+  <div class="row full">Dull, Rusted Machete</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Wood</li>
+      <li>1x Fiber</li>
+      <li>1x Adhesive</li>
+      <li>1x Metal</li>
+      </div>
+    <div class="cell image">
+     <img src="img/rusted.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +3</div>
+    <div class="cell">OOC Crafting Time: 10:00</div>
+  </div>
+</div>
       </article>
       </section>
     </section>
@@ -108,6 +127,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
