--- a/weapons.html
+++ b/weapons.html
@@ -120,6 +120,50 @@
     <div class="cell">OOC Crafting Time: 10:00</div>
   </div>
 </div>
+           <div class="custom-grid">
+  <div class="row full">Improvised Bow</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Pipe</li>
+      <li>1x Fiber</li>
+      <li>2x Wood</li>
+      <li>1x Fiber</li>
+<h3> Arrows</h3>
+<li>1x Wood</li>
+<li>1x Blade/ 1x Stone</li>
+
+      </div>
+    <div class="cell image">
+     <img src="img/improv.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +3</div>
+    <div class="cell">OOC Crafting Time: 10:00</div>
+  </div>
+</div>
+           <div class="custom-grid">
+  <div class="row full">The Judas</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>2x Metal</li>
+      <li>1x Fiber</li>
+      <li>1x Adhesive</li>
+      <li>1x Wood</li>
+<li> The USRF does not condone the creation of this weapon, having a 50% chance of blowing up.</li>
+      <li> (Roll a coin, if heads. The weapon will explode. You get one shot.)</li>
+      </div>
+    <div class="cell image">
+     <img src="img/ouch.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +3</div>
+    <div class="cell">OOC Crafting Time: 50:00</div>
+  </div>
+</div>
       </article>
       </section>
     </section>
@@ -127,6 +171,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
