--- a/weapons.html
+++ b/weapons.html
@@ -134,7 +134,7 @@
 
       </div>
     <div class="cell image">
-     <img src="img/improv.png" alt="Metal" />
+     <img src="img/improv.png" alt="improv" />
     </div>
   </div>
   <div class="row triple">
@@ -152,10 +152,10 @@
       <li>1x Adhesive</li>
       <li>1x Wood</li>
 <li> The USRF does not condone the creation of this weapon, having a 50% chance of blowing up.</li>
-      <li> (Roll a coin, if heads. The weapon will explode. You get one shot.)</li>
+      <li> (Roll a coin, if heads. The weapon will explode, you get one shot.)</li>
       </div>
     <div class="cell image">
-     <img src="img/ouch.png" alt="Metal" />
+     <img src="img/ouch.png" alt="ouch" />
     </div>
   </div>
   <div class="row triple">
@@ -171,6 +171,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
