--- a/weapons.html
+++ b/weapons.html
@@ -164,6 +164,60 @@
     <div class="cell">OOC Crafting Time: 50:00</div>
   </div>
 </div>
+<h2>Intermediate Weapons</h2>
+           <div class="custom-grid">
+  <div class="row full">Bow</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Wood</li>
+      <li>1x Strong Fiber</li>
+      <li>1x Wood</li>
+      </div>
+    <div class="cell image">
+     <img src="img/improv.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +6</div>
+    <div class="cell">OOC Crafting Time: 20:00</div>
+  </div>
+</div>
+                   <div class="custom-grid">
+  <div class="row full">Bow</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>2x Wood</li>
+      <li>1x Strong Fiber</li>
+      </div>
+    <div class="cell image">
+     <img src="img/improv.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +6</div>
+    <div class="cell">OOC Crafting Time: 20:00</div>
+  </div>
+</div>
+                           <div class="custom-grid">
+  <div class="row full">Baseball Bat</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Strong Wood</li>
+    <li>1x Treated Wood</li>
+    <li>1x Adhesive</li>
+      </div>
+    <div class="cell image">
+     <img src="img/baseball.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: N/A</div>
+    <div class="cell">KP: +6</div>
+    <div class="cell">OOC Crafting Time: 15:00</div>
+  </div>
+</div>
       </article>
       </section>
     </section>
@@ -171,6 +225,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
