--- a/weapons.html
+++ b/weapons.html
@@ -218,6 +218,59 @@
     <div class="cell">OOC Crafting Time: 15:00</div>
   </div>
 </div>
+                           <div class="custom-grid">
+  <div class="row full">Baseball Bat w/ Nails</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Baseball Bat</li>
+    <li>4x Nails</li>
+      </div>
+    <div class="cell image">
+     <img src="img/baseball.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Hammer</div>
+    <div class="cell">KP: +6</div>
+    <div class="cell">OOC Crafting Time: 01:00</div>
+  </div>
+</div>
+<div class="custom-grid">
+  <div class="row full">Baseball Bat (Blunt)</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Baseball Bat</li>
+    <li>1x Nails</li>
+      <li>1x Metal</li>
+      </div>
+    <div class="cell image">
+     <img src="img/baseball.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Hammer</div>
+    <div class="cell">KP: +6</div>
+    <div class="cell">OOC Crafting Time: 05:00</div>
+  </div>
+</div>
+        <div class="custom-grid">
+  <div class="row full">Meat Hook</div>
+  <div class="row split">
+    <div class="cell text">Ingredients Required:
+    <li>1x Blade</li>
+    <li>1x Treated Wood</li>
+      <li>1x Metal</li>
+      </div>
+    <div class="cell image">
+     <img src="img/hook.png" alt="Metal" />
+    </div>
+  </div>
+  <div class="row triple">
+    <div class="cell">Tools: Hammer, Heat</div>
+    <div class="cell">KP: +6</div>
+    <div class="cell">OOC Crafting Time: 30:00</div>
+  </div>
+</div>
       </article>
       </section>
     </section>
@@ -225,6 +278,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
